Fix issues with hero banner on mobile

--- a/great-western-wine-theme/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
+++ b/great-western-wine-theme/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
@@ -116,7 +116,7 @@
 
 .heroCarousel-content {
     background-color: rgba($carousel-bgColor, 1);
-    padding: spacing("half") spacing("single") (spacing("single"));
+    padding: spacing("half");
     text-align: left;
 
     @include breakpoint("medium") {
@@ -191,8 +191,11 @@
     width: 100%;
     display: inline-block;
     max-height: 500px;
-    height: 300px;
     position: relative;
+    
+    @include breakpoint("medium") {
+        height: 300px;
+    }
 
     @include breakpoint("large") {
         height: 400px;
@@ -208,8 +211,10 @@
 }
 
 .hero-content-cont {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    @include breakpoint("medium") {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
